--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "devDependencies": {
     "browser-sync": "^2.26.5",
     "gulp": "^4.0.1",
+    "gulp-cache": "^1.1.1",
+    "gulp-imagemin": "^5.0.3",
     "gulp-sass": "^4.0.2"
   }
 }
